--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
     image: node:20
     container_name: dojomanager-node
     working_dir: /var/www
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "chmod -R 777 /var/www && npm install && npm run dev"
     volumes:
       - ./:/var/www
     ports:
