--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "8989:80"
     volumes:
       - ./:/var/www
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf   # Fix: monte o arquivo default.conf diretamente
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
     networks:
@@ -36,7 +36,7 @@ services:
       POSTGRES_USER: ${DB_USERNAME:-laravel}
       POSTGRES_PASSWORD: ${DB_PASSWORD:-secret}
     volumes:
-      - .docker/postgres/data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -68,7 +68,7 @@ services:
     volumes:
       - ./:/var/www
     ports:
-      - "5173:5173"     # expose a porta do vite para hot reload funcionar externamente
+      - "5173:5173"
     environment:
       - NODE_ENV=development
     networks:
@@ -79,3 +79,6 @@ services:
 networks:
   laravel:
     driver: bridge
+
+volumes:
+  pgdata:
