--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
         "consoletvs/charts": "^6.8",
+        "google-gemini-php/client": "^2.5",
+        "google-gemini-php/laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
