--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
     networks:
       - laravel
     ports:
-      - "5173:5173" # Expondo porta do Vite para dev, se necessário
-
+      - "5173:5173"
   nginx:
     image: nginx:alpine
     restart: unless-stopped
@@ -26,6 +25,7 @@ services:
     volumes:
       - ./:/var/www
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - app
     networks:
