--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,11 +1,32 @@
+# Redireciona todo o HTTP para HTTPS
 server {
     listen 80;
-    index index.php;
+    server_name meudojoflow.com.br www.meudojoflow.com.br;
+    return 301 https://$host$request_uri;
+}
+
+# Servidor HTTPS
+server {
+    listen 443 ssl;
+    server_name meudojoflow.com.br www.meudojoflow.com.br;
+
     root /var/www/public;
+    index index.php;
+
+    ssl_certificate /etc/letsencrypt/live/meudojoflow.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/meudojoflow.com.br/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     client_max_body_size 51g;
     client_body_buffer_size 512k;
     client_body_in_file_only clean;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+    }
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -17,11 +38,6 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
-    }
-
-    error_log  /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 }
